Support for CodeTFv2, new codedods, and many other things (#123)
This branch has served as our unofficial `main` for some time, and now
it's time to return to it's home. It's got great unit test coverage, and
is also been testing by downstream consumers extensively.

---------

Co-authored-by: Aldrin Leal <aldrin+gh@leal.eng.br>
Co-authored-by: Aldrin Leal <aldrin@leal.eng.br>
Co-authored-by: André C. Silva <12188364+andrecsilva@users.noreply.github.com>
Co-authored-by: Johnathan Gilday <johnathan.gilday@pixee.ai>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>