@@ -1,31 +1,26 @@
 package io.codemodder;
 
+import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.github.javaparser.JavaParser;
-import com.github.javaparser.ParseResult;
-import com.github.javaparser.ParserConfiguration;
-import com.github.javaparser.ast.CompilationUnit;
-import com.github.javaparser.printer.lexicalpreservation.LexicalPreservingPrinter;
-import com.github.javaparser.symbolsolver.JavaSymbolSolver;
-import com.github.javaparser.symbolsolver.resolution.typesolvers.CombinedTypeSolver;
-import com.github.javaparser.symbolsolver.resolution.typesolvers.JavaParserTypeSolver;
-import com.github.javaparser.symbolsolver.resolution.typesolvers.ReflectionTypeSolver;
+import com.google.common.base.Stopwatch;
 import io.codemodder.codetf.CodeTFReport;
 import io.codemodder.codetf.CodeTFReportGenerator;
+import io.codemodder.codetf.CodeTFResult;
+import io.codemodder.javaparser.CachingJavaParser;
 import io.codemodder.javaparser.JavaParserFactory;
 import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Clock;
+import java.time.Duration;
 import java.time.Instant;
 import java.util.*;
 import java.util.concurrent.Callable;
 import java.util.stream.Collectors;
+import org.apache.commons.io.FileUtils;
 import org.jetbrains.annotations.VisibleForTesting;
-import org.mozilla.universalchardet.UniversalDetector;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import picocli.CommandLine;
@@ -37,13 +32,14 @@ import picocli.CommandLine;
     description = "Run a codemodder codemod")
 final class CLI implements Callable<Integer> {
 
-  private final List<Class<? extends Changer>> codemods;
+  private final List<Class<? extends CodeChanger>> codemodTypes;
   private final Clock clock;
   private final FileFinder fileFinder;
-  private final JavaParserFactory javaParserFactory;
   private final EncodingDetector encodingDetector;
+  private final JavaParserFactory javaParserFactory;
   private final SourceDirectoryLister sourceDirectoryLister;
   private final CodeTFReportGenerator reportGenerator;
+  private final String[] args;
 
   @CommandLine.Option(
       names = {"--output"},
@@ -55,6 +51,13 @@ final class CLI implements Callable<Integer> {
       description = "do everything except make changes to files",
       defaultValue = "false")
   private boolean dryRun;
+
+  @CommandLine.Option(
+      names = {"--dont-exit"},
+      description = "dont exit the process after running the codemods",
+      hidden = true,
+      defaultValue = "false")
+  private boolean dontExit;
 
   @CommandLine.Option(
       names = {"--verbose"},
@@ -93,6 +96,11 @@ final class CLI implements Callable<Integer> {
   private List<String> codemodIncludes;
 
   @CommandLine.Option(
+      names = {"--parameter"},
+      description = "a codemod parameter")
+  private List<String> codemodParameters;
+
+  @CommandLine.Option(
       names = {"--codemod-exclude"},
       description = "comma-separated set of codemod IDs to exclude",
       split = ",")
@@ -116,59 +124,36 @@ final class CLI implements Callable<Integer> {
     DIFF
   }
 
-  CLI(final List<Class<? extends Changer>> codemods) {
+  CLI(final String[] args, final List<Class<? extends CodeChanger>> codemodTypes) {
     this(
-        codemods,
+        args,
+        codemodTypes,
         Clock.systemUTC(),
         new DefaultFileFinder(),
-        new DefaultJavaParserFactory(),
         new DefaultEncodingDetector(),
+        JavaParserFactory.newFactory(),
         SourceDirectoryLister.createDefault(),
         CodeTFReportGenerator.createDefault());
   }
 
   CLI(
-      final List<Class<? extends Changer>> codemods,
+      final String[] args,
+      final List<Class<? extends CodeChanger>> codemodTypes,
       final Clock clock,
       final FileFinder fileFinder,
-      final JavaParserFactory javaParserFactory,
       final EncodingDetector encodingDetector,
+      final JavaParserFactory javaParserFactory,
       final SourceDirectoryLister sourceDirectoryLister,
       final CodeTFReportGenerator reportGenerator) {
-    Objects.requireNonNull(codemods);
-    this.codemods = Collections.unmodifiableList(codemods);
+    Objects.requireNonNull(codemodTypes);
+    this.codemodTypes = Collections.unmodifiableList(codemodTypes);
     this.clock = Objects.requireNonNull(clock);
     this.fileFinder = Objects.requireNonNull(fileFinder);
-    this.javaParserFactory = Objects.requireNonNull(javaParserFactory);
     this.encodingDetector = Objects.requireNonNull(encodingDetector);
+    this.javaParserFactory = Objects.requireNonNull(javaParserFactory);
     this.sourceDirectoryLister = Objects.requireNonNull(sourceDirectoryLister);
     this.reportGenerator = Objects.requireNonNull(reportGenerator);
-  }
-
-  @VisibleForTesting
-  static class DefaultEncodingDetector implements EncodingDetector {
-    @Override
-    public Optional<String> detect(final Path originalJavaFile) throws IOException {
-      String encoding = UniversalDetector.detectCharset(originalJavaFile);
-      return Optional.ofNullable(encoding);
-    }
-  }
-
-  @VisibleForTesting
-  static class DefaultJavaParserFactory implements JavaParserFactory {
-
-    @Override
-    public JavaParser create(final List<SourceDirectory> sourceDirectories) throws IOException {
-      final JavaParser javaParser = new JavaParser();
-      final CombinedTypeSolver combinedTypeSolver = new CombinedTypeSolver();
-      combinedTypeSolver.add(new ReflectionTypeSolver());
-      sourceDirectories.forEach(
-          javaDirectory -> combinedTypeSolver.add(new JavaParserTypeSolver(javaDirectory.path())));
-      ParserConfiguration parserConfiguration = javaParser.getParserConfiguration();
-      parserConfiguration.setLanguageLevel(ParserConfiguration.LanguageLevel.BLEEDING_EDGE);
-      parserConfiguration.setSymbolResolver(new JavaSymbolSolver(combinedTypeSolver));
-      return javaParser;
-    }
+    this.args = Objects.requireNonNull(args);
   }
 
   @VisibleForTesting
@@ -196,8 +181,8 @@ final class CLI implements Callable<Integer> {
   public Integer call() throws IOException {
 
     if (listCodemods) {
-      for (Class<? extends Changer> codemod : codemods) {
-        Codemod annotation = codemod.getAnnotation(Codemod.class);
+      for (Class<? extends CodeChanger> codemodType : codemodTypes) {
+        Codemod annotation = codemodType.getAnnotation(Codemod.class);
         log.info(annotation.id());
       }
       return SUCCESS;
@@ -213,15 +198,32 @@ final class CLI implements Callable<Integer> {
       return ERROR_CANT_READ_PROJECT_DIRECTORY;
     }
 
+    Path outputPath = output.toPath();
+    if (!Files.isWritable(outputPath) && !Files.isWritable(outputPath.getParent())) {
+      log.error("The output file (or its parent directory) is not writable");
+      return ERROR_CANT_WRITE_OUTPUT_FILE;
+    }
+
     Path projectPath = projectDirectory.toPath();
     if (!Files.isDirectory(projectPath) || !Files.isReadable(projectPath)) {
       log.error("The project directory is not a readable directory");
       return ERROR_CANT_READ_PROJECT_DIRECTORY;
     }
-    Path outputPath = output.toPath();
-    if (!Files.isWritable(outputPath) && !Files.isWritable(outputPath.getParent())) {
-      log.error("The output file (or its parent directory) is not writable");
-      return ERROR_CANT_WRITE_OUTPUT_FILE;
+
+    if (dryRun) {
+      // create a temp dir and copy all the contents into it -- this may be slow for big repos on
+      // cloud i/o
+      Path copiedProjectDirectory = Files.createTempDirectory("codemodder-project");
+      Stopwatch watch = Stopwatch.createStarted();
+      log.info("Copying project directory for dry run..: {}", copiedProjectDirectory);
+      FileUtils.copyDirectory(projectDirectory, copiedProjectDirectory.toFile());
+      watch.stop();
+      Duration elapsed = watch.elapsed();
+      log.info("Copy took: {}", elapsed);
+
+      // now that we've copied it, reassign the project directory to that place
+      projectDirectory = copiedProjectDirectory.toFile();
+      projectPath = copiedProjectDirectory;
     }
 
     Instant start = clock.instant();
@@ -259,64 +261,44 @@ final class CLI implements Callable<Integer> {
       regulator = CodemodRegulator.of(DefaultRuleSetting.ENABLED, codemodExcludes);
     }
 
-    // create the invoker
-    CodemodInvoker invoker = new CodemodInvoker(codemods, regulator, projectPath);
+    // create the loader
+    List<Path> sarifFiles =
+        sarifs != null ? sarifs.stream().map(Path::of).collect(Collectors.toList()) : List.of();
+    Map<String, List<RuleSarif>> pathSarifMap =
+        SarifParser.create().parseIntoMap(sarifFiles, projectPath);
+    List<ParameterArgument> codemodParameters = createFromParameterStrings(this.codemodParameters);
+    CodemodLoader loader =
+        new CodemodLoader(codemodTypes, regulator, projectPath, pathSarifMap, codemodParameters);
+    List<CodemodIdPair> codemods = loader.getCodemods();
 
-    // run the codemods on the files
-    Set<ChangedFile> changedFiles = new HashSet<>();
-    Set<String> unscannableFiles = new HashSet<>();
+    // create the project providers
+    List<ProjectProvider> projectProviders = loadProjectProviders();
+    List<CodeTFProvider> codeTFProviders = loadCodeTFProviders();
 
-    // java files get fed to the codemodder apis that handle java compilation units, everything else
-    // gets sent to the codemodder apis that handle raw files
-    JavaParser javaParser = javaParserFactory.create(sourceDirectories);
-    for (Path filePath : filePaths) {
-      File file = filePath.toFile();
-      FileWeavingContext fileContext = FileWeavingContext.createDefault(file, includesExcludes);
-      Optional<ChangedFile> changedFile = Optional.empty();
-      try {
-        if (file.getName().toLowerCase().endsWith(".java")) {
-          changedFile = invokeOnJavaFile(invoker, javaParser, filePath, fileContext);
-        } else {
-          changedFile = invoker.executeFile(filePath, fileContext);
-        }
-      } catch (Exception e) {
-        log.error("Error processing file {}", file.getAbsolutePath());
-        unscannableFiles.add(file.getAbsolutePath());
-      }
-      changedFile.ifPresent(changedFiles::add);
-    }
+    List<CodeTFResult> results = new ArrayList<>();
 
     /*
-     * Now that all the codemods have had a chance to touch all the files, we can ask the project providers to apply
-     * any corrective changers to the project as a whole. This is useful for things like adding a dependency to the
-     * project's pom.xml file.
+     * Run the codemods on the files. Note that we cache the compilation units so that we're always retaining
+     * the original concrete syntax information (e.g., line numbers) in JavaParser from the first access. This
+     * is what allows our codemods to act on SARIF-providing tools data accurately over multiple codemods.
      */
-    List<FileDependency> fileDependencies = new ArrayList<>();
-    for (ChangedFile file : changedFiles) {
-      Path path = Path.of(file.modifiedFile());
-      List<DependencyGAV> deps =
-          file.weaves().stream()
-              .map(Weave::getDependenciesNeeded)
-              .flatMap(Collection::stream)
-              .distinct()
-              .collect(Collectors.toList());
-      fileDependencies.add(FileDependency.create(path, deps));
+    JavaParser javaParser = javaParserFactory.create(sourceDirectories);
+    CachingJavaParser cachingJavaParser = CachingJavaParser.from(javaParser);
+    for (CodemodIdPair codemod : codemods) {
+      CodemodExecutor codemodExecutor =
+          new DefaultCodemodExecutor(
+              projectPath,
+              includesExcludes,
+              codemod,
+              projectProviders,
+              codeTFProviders,
+              cachingJavaParser,
+              encodingDetector);
+      CodeTFResult result = codemodExecutor.execute(filePaths);
+      if (!result.getChangeset().isEmpty() || !result.getFailedFiles().isEmpty()) {
+        results.add(result);
+      }
     }
-
-    List<ProjectProvider> projectProviders = loadProjectProviders();
-    for (ProjectProvider projectProvider : projectProviders) {
-      DependencyUpdateResult result =
-          projectProvider.updateDependencies(projectPath, changedFiles, fileDependencies);
-      unscannableFiles.addAll(
-          result.erroredFiles().stream()
-              .map(Path::toAbsolutePath)
-              .map(Objects::toString)
-              .collect(Collectors.toList()));
-      changedFiles = result.updatedChanges();
-      fileDependencies.removeAll(result.injectedDependencies());
-    }
-
-    WeavingResult results = WeavingResult.createDefault(changedFiles, unscannableFiles);
 
     Instant end = clock.instant();
     long elapsed = end.toEpochMilli() - start.toEpochMilli();
@@ -325,65 +307,41 @@ final class CLI implements Callable<Integer> {
     if (OutputFormat.CODETF.equals(outputFormat)) {
       CodeTFReport report =
           reportGenerator.createReport(
-              projectDirectory, pathIncludes, pathExcludes, results, elapsed);
+              projectDirectory.toPath(),
+              String.join(" ", args),
+              sarifs == null
+                  ? List.of()
+                  : sarifs.stream().map(Path::of).collect(Collectors.toList()),
+              results,
+              elapsed);
       ObjectMapper mapper = new ObjectMapper();
-      Files.write(outputPath, mapper.writeValueAsString(report).getBytes(StandardCharsets.UTF_8));
+      mapper.setSerializationInclusion(JsonInclude.Include.NON_NULL);
+      Files.writeString(outputPath, mapper.writeValueAsString(report));
     } else if (OutputFormat.DIFF.equals(outputFormat)) {
       throw new UnsupportedOperationException("not supported yet");
     }
 
-    if (!dryRun) {
-      // write out the changed files
-      for (ChangedFile changedFile : results.changedFiles()) {
-        byte[] contents = Files.readAllBytes(Path.of(changedFile.modifiedFile()));
-        Files.write(Path.of(changedFile.originalFilePath()), contents);
-      }
-    } else {
-      log.info("Dry run, not writing any files");
+    if (dryRun) {
+      // delete the temp directory
+      log.info("Cleaning temp directory");
+      FileUtils.deleteDirectory(projectDirectory);
     }
 
-    int totalChanges =
-        changedFiles.stream().map(cf -> cf.weaves().size()).mapToInt(Integer::intValue).sum();
-    log.info(
-        "Scanned {} files, changing {} of them with {} individual changes",
-        filePaths.size(),
-        changedFiles.size(),
-        totalChanges);
+    // this is a special exit code that tells the caller to not exit
+    if (dontExit) {
+      return -1;
+    }
 
     return SUCCESS;
   }
 
-  private Optional<ChangedFile> invokeOnJavaFile(
-      final CodemodInvoker invoker,
-      final JavaParser javaParser,
-      final Path file,
-      final FileWeavingContext context)
-      throws IOException {
-    Optional<ChangedFile> changedFile = Optional.empty();
-    final InputStream in = Files.newInputStream(file);
-    final ParseResult<CompilationUnit> result = javaParser.parse(in);
-    if (!result.isSuccessful()) {
-      throw new RuntimeException("can't parse file");
+  private List<CodeTFProvider> loadCodeTFProviders() {
+    List<CodeTFProvider> codeTFProviders = new ArrayList<>();
+    ServiceLoader<CodeTFProvider> loader = ServiceLoader.load(CodeTFProvider.class);
+    for (CodeTFProvider provider : loader) {
+      codeTFProviders.add(provider);
     }
-    final CompilationUnit cu = result.getResult().orElseThrow();
-
-    // send the compilation unit to the codemodder api
-    invoker.execute(file, cu, context);
-
-    // if the file was modified, write it out to a temp file and create a ChangedFile
-    if (context.madeWeaves()) {
-      final String encoding = encodingDetector.detect(file).orElse("UTF-8");
-      final String modified = (LexicalPreservingPrinter.print(cu));
-      Path modifiedFile = Files.createTempFile("modified", ".java");
-      Files.write(modifiedFile, modified.getBytes(encoding));
-      ChangedFile cf =
-          ChangedFile.createDefault(
-              file.toAbsolutePath().toString(),
-              modifiedFile.toAbsolutePath().toString(),
-              context.weaves());
-      changedFile = Optional.of(cf);
-    }
-    return changedFile;
+    return codeTFProviders;
   }
 
   private List<ProjectProvider> loadProjectProviders() {
@@ -393,6 +351,19 @@ final class CLI implements Callable<Integer> {
       projectProviders.add(projectProvider);
     }
     return projectProviders;
+  }
+
+  /**
+   * Translate the codemod parameters delivered as CLI arguments in the form of LDAP-style
+   * name=value pairs into their POJO form.
+   */
+  private List<ParameterArgument> createFromParameterStrings(final List<String> parameterStrings) {
+    if (parameterStrings == null || parameterStrings.isEmpty()) {
+      return List.of();
+    }
+    return parameterStrings.stream()
+        .map(ParameterArgument::fromNameValuePairs)
+        .collect(Collectors.toUnmodifiableList());
   }
 
   private static final int SUCCESS = 0;
